lintian-brush (0.17) UNRELEASED; urgency=medium

  [ Dmitry Bogatov ]
  * Support policy version bumps from 4.3.0 to 4.4.0. Closes: #932314

  [ Jelmer Vernooĳ ]
  * Guess (with low certainty) repositories from README.
  * Add support for reading upstream metadata from META.json.
  * Add support for reading upstream metadata from META.yml files.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 16 Jul 2019 00:13:31 +0000

lintian-brush (0.16) unstable; urgency=medium

  * Don't export expired signatures; these may still be useful, and
    excluding them will break the tests in the future.
  * Migrate debian/compat files to debhelper-compat build-depends for
    debhelper >= 11.
  * dep5-file-paragraph-references-header-paragraph: Don't print an
    error message when the copyright file does not use DEP5.
  * Add fixer debian-watch-file-is-missing.
  * Add a (hidden) --minimum-certainty option.
  * Add experimental fixer for upstream-metadata-file-is-missing.
  * Also check homepage field to guess at upstream repository.
  * Upload to unstable.

  [ Dmitry Bogatov ]
  * Add fixer for patch-file-present-but-not-mentioned-in-series.
    Closes: #928811
  * Try to replace 'http:' with 'https:' in debian/watch by validating
    using the uscan report. Closes: #928810

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 23 Feb 2019 03:45:54 +0000

lintian-brush (0.15) experimental; urgency=medium

  * Add fixer for field-name-typo-in-dep5-copyright.
  * Add fixer for invalid-short-name-in-dep5-copyright.
  * Add fixer for dep5-file-paragraph-references-header-paragraph.
  * Add fixer for old-fsf-address-in-copyright-file.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 19 Feb 2019 02:11:38 +0000

lintian-brush (0.14) experimental; urgency=medium

  [ Dmitry Bogatov ]
  * Add a fixer for out-of-date-standards-version. Closes: #921971

  [ Jelmer Vernooĳ ]
  * Extend out-of-date-standards-version fixer to only change
    the standards version when the upgrade is known to not