@@ -1,0 +1,111 @@
+<Project
+  xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+  xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
+  xmlns:dc="http://purl.org/dc/elements/1.1/"
+  xmlns="http://usefulinc.com/ns/doap#"
+  xmlns:foaf="http://xmlns.com/foaf/0.1/"
+  xmlns:admin="http://webns.net/mvcb/">
+
+ <name>blah</name>
+ <shortname>blah</shortname>
+ <homepage rdf:resource="http://example.com/blah/trac/" />
+ <created>2006-06-11</created>
+ <shortdesc xml:lang="en">
+blah is a swiss army knife for project maintainers and developers.
+</shortdesc>
+ <description xml:lang="en">
+ Lorem ipsum.
+ </description>
+ <category></category>
+ <wiki rdf:resource="http://example.com/blah/trac/" />
+ <bug-database rdf:resource="http://example.com/blah/trac/newticket" />
+ <screenshots></screenshots>
+<!--
+ <mailing-list rdf:resource="http://lists.sourceforge.net/lists/listinfo/blah-devel/" />
+-->
+ <programming-language>python</programming-language>
+ <license rdf:resource="http://usefulinc.com/doap/licenses/gpl" />
+ <download-page rdf:resource="http://example.com/projects/blah/" />
+
+ <repository>
+   <SVNRepository>
+     <location rdf:resource="http://example.com/blah/svn/trunk/" />
+     <browse rdf:resource="http://example.com/blah/trac/browser/" />
+   </SVNRepository>
+ </repository> 
+
+ <maintainer>
+  <foaf:Person>
+     <foaf:name>Joe Maintainer</foaf:name>
+  </foaf:Person>
+ </maintainer>
+
+
+ <release>
+  <Version>
+   <revision>0.2.4</revision>
+   <branch>trunk</branch>
+   <name>Pacito</name>
+   <created>2007-05-20</created>
+   <file-release rdf:resource="http://example.com/download/blah/blah-0.2.4.tar.bz2" />
+   <file-release rdf:resource="http://example.com/download/blah/blah-0.2.4-1.noarch.rpm" />
+   <dc:description>
+Added RSS 2.0 feed generation from .doap release entries using Genshi or
+Cheetah templates.
+Added support for CHANGE_LOG_EMAIL_ADDRESS environment variable to
+blah changelog prepare.
+Added parsing of wiki attribute of a .DOAP project.
+Implemented "blah doap search" to search Google or Yahoo for your project's
+home page.
+Added support for multiple doap files to "blah doap"
+Added code to check the user's distribution and offer hints on how to install
+dependencies.
+    </dc:description>
+  </Version>
+ </release>
+
+ <release>
+  <Version>
+   <revision>0.2.3</revision>
+   <branch>trunk</branch>
+   <name>Ketnet</name>
+   <created>2007-04-17</created>
+   <file-release rdf:resource="http://example.com/download/blah/blah-0.2.3.tar.bz2" />
+   <file-release rdf:resource="http://example.com/download/blah/blah-0.2.3-1.noarch.rpm" />
+  </Version>
+ </release>
+
+ <release>
+  <Version>
+   <revision>0.2.2</revision>
+   <branch>trunk</branch>
+   <name>Airlines</name>
+   <created>2007-03-25</created>
+   <file-release rdf:resource="http://example.com/download/blah/blah-0.2.2.tar.bz2" />
+   <file-release rdf:resource="http://example.com/download/blah/blah-0.2.2-1.noarch.rpm" />
+  </Version>
+ </release>
+
+ <release>
+  <Version>
+   <revision>0.2.1</revision>
+   <branch>trunk</branch>
+   <name>Ambulance</name>
+   <created>2007-02-04</created>
+   <file-release rdf:resource="http://example.com/download/blah/blah-0.2.1.tar.bz2" />
+   <file-release rdf:resource="http://example.com/download/blah/blah-0.2.1-1.noarch.rpm" />
+  </Version>
+ </release>
+
+ <release>
+  <Version>
+   <revision>0.2.0</revision>
+   <branch>trunk</branch>
+   <name>Waffle Flop</name>
+   <created>2006-12-17</created>
+   <file-release rdf:resource="http://example.com/download/blah/blah-0.2.0.tar.bz2" />
+   <file-release rdf:resource="http://example.com/download/blah/blah-0.2.0-1.noarch.rpm" />
+  </Version>
+ </release>
+
+</Project>
