@@ -1,0 +1,4 @@
+Name: blah
+Homepage: http://example.com/blah/trac/
+Bug-Database: http://example.com/blah/trac/newticket
+Repository: http://example.com/blah/svn/trunk/
