@@ -7,6 +7,7 @@ lintian-brush (0.17) UNRELEASED; urgency=medium
   * Guess (with low certainty) repositories from README.
   * Add support for reading upstream metadata from META.json.
   * Add support for reading upstream metadata from META.yml files.
+  * Add support for reading upstream metadata from DOAP files.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 16 Jul 2019 00:13:31 +0000
 
